# imexp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  context.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
data/config/imexp/: config.example.ini
docs/dev/: client-context.md  issue-1-plan.md  release-runbook.md
packaging/: bundle_exporter.py  hatch_build.py  imessage-exporter-assets.json  update_upstream_manifest.py
scripts/: bundle_exporter.py  clean_build_artifacts.py
src/imexp/: __main__.py
src/imexp/cli/: config.py  main.py
src/imexp/core/: change_to_appropriate_name.py  exporter_binary.py
src/imexp/core/utils/: helpformatter.py
tests/: test_cli_flow.py  test_config.py  test_exporter_binary.py  test_filter_resolution.py  test_hatch_build.py  test_help_formatting.py  test_helpers.py  test_packaging_metadata.py  test_relabel.py  test_update.py
