[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imexp"
version = "0.0.1"
description = "Interactive CLI wrapper for imessage-exporter with contact name resolution and post-processing"
authors = [{name = "Code", email = "switched.code@gmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = ["imessage", "sms", "export", "backup", "messages", "macos", "ios"]
dependencies = [
    "dateparser==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pylint==4.0.4",
    "pytest==9.0.2",
    "pytest-cov==7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
imexp = "imexp.cli.main:main"
